--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -100,7 +100,7 @@
                             </div>
                             <div class="extra">
                                 <a class="ui right floated teal button" href="/gruppi">
-                                    spostati  in questa sezione
+                                    Vai
                                     <i class="right chevron icon"></i>
                                 </a>
                             </div>
@@ -124,7 +124,7 @@
                             </div>
                             <div class="extra">
                                 <a class="ui right floated teal button" href="/taskPersonali">
-                                    spostati  in questa sezione
+                                    Vai
                                     <i class="right chevron icon"></i>
                                 </a>
 <!--                                <div class="ui label">Limited</div>-->
@@ -146,7 +146,7 @@
                             </div>
                             <div class="extra">
                                 <a class="ui right floated teal button" href="/repository">
-                                    spostati  in questa sezione
+                                    Vai
                                     <i class="right chevron icon"></i>
                                 </a>
                             </div>
