--- a/src/main/resources/templates/consegna/destinatari.html
+++ b/src/main/resources/templates/consegna/destinatari.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <head th:include="/fragments/fragments.html :: head">
+    <head th:include="fragments/fragments.html :: head">
         <title id="pageTitle">Amigo | Destinatari</title>
     </head>
 </head>
